# alan

./: .editorconfig  .envcheck.sh  .gitbook.yml  .gitignore  .prerelease.sh  .semver.js  .version.sh  CODE_OF_CONDUCT.md  Cargo.toml  FAQ.md  LICENSE  Makefile  README.md  alan  alanStdBundle.js  alan_std.js  alan_std.test.html  alan_std.test.js  alan_std.test_gpgpu.js  brace_trace.py  chrome_console.js  depths.txt  hello.ln  package.json  playwright.config.js  pnpm-lock.yaml  test2.rs  void_literal_construction.ln  web_compiler.html  window.ln  window.rs  world.ln
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: autopublish.yml  bdd.yml  bench.yml  brew.yaml  devskim.yml  node.yml  release.yml  rust-clippy.yml  rust.yml  tests.yml
.opencode/: state.json
.opencode/plans/: alan-refactor.md
alan/: Cargo.toml  test.ln
alan/benches/: bench.ln  buffer_shader_timings.ln  fill.rs  map.rs
alan/src/: compile.rs  lib.rs  main.rs  parse.rs  program.rs
alan/src/compile/: golden_tests.rs  integration_tests.rs  mod.rs
alan/src/lntojs/: function.rs  mod.rs  typen.rs
alan/src/lntors/: function.rs  mod.rs  typen.rs
alan/src/program/: ctype.rs  fnkind.rs  function.rs  import.rs  microstatement.rs  mod.rs  operatormapping.rs  program.rs  scope.rs
alan/src/std/: fs.ln  root.ln  root.rs  seq.ln
alan/testdata/golden/: lntojs_test.golden  lntors_test.golden
alan_compiler/: Cargo.toml
alan_compiler/src/: fmt.rs  lib.rs  parse.rs  render.rs
alan_compiler/src/codegen/: common.rs  mod.rs
alan_compiler/src/lntojs/: function.rs  mod.rs  typen.rs
alan_compiler/src/lntors/: function.rs  mod.rs  typen.rs
alan_compiler/src/program/: constn.rs  ctype.rs  fnkind.rs  function.rs  inline.rs  liveness.rs  microstatement.rs  mod.rs  operatormapping.rs  program.rs  scope.rs  typeoperatormapping.rs
alan_compiler/src/program/ctype/: display.rs  mod.rs
alan_compiler/src/std/: README.md  fs.ln  root.ln  seq.ln  window.ln
alan_std/: Cargo.toml
alan_std/src/: lib.rs
alan_std_window/: Cargo.toml
alan_std_window/src/: lib.rs
anycloud/: LICENSE
anycloud/cli/: Cargo.toml  build.rs
anycloud/cli/alan/: .gitignore  anycloud.ln
anycloud/cli/src/: lib.rs  main.rs
anycloud/cli/src/common/: mod.rs
anycloud/cli/src/deploy/: anycloud_dialoguer.rs  dialoguer.rs  mod.rs
anycloud/cli/src/logger/: mod.rs
anycloud/cli/src/oauth/: mod.rs
anycloud/docs/: README.md  about.md  authenticate.md  cli.md  install.md  summary.md  tutorial.md
anycloud/node/: .gitignore  .npmignore  README.md  get-anycloud.js  jest.config.js  package-lock.json  package.json  tsconfig.json
avm/: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  err.txt  temp.aga  temp.ln
avm/src/: compile.rs  main.rs
avm/src/benchmark/: mod.rs  run.rs
avm/src/cloud/: mod.rs
avm/src/cloud/common/: mod.rs
avm/src/cloud/deploy/: mod.rs
avm/src/cloud/http/: mod.rs
avm/src/cloud/logger/: mod.rs
avm/src/cloud/oauth/: mod.rs
avm/src/compile/: mod.rs  unix.rs  windows.rs
avm/src/daemon/: ctrl.rs  daemon.rs  dns.rs  linux.rs  logger.rs  lrh.rs  mod.rs  nonlinux.rs  stats.rs
avm/src/deploy/deploy/: mod.rs
avm/src/deploy/logger/: mod.rs
avm/src/deploy/oauth/: mod.rs
avm/src/vm/: deploy.rs  event.rs  http.rs  instruction.rs  memory.rs  mod.rs  opcode.rs  program.rs  run.rs  tcp.rs  telemetry.rs
avm/src/vm/protos/: .gitignore  HandlerMemory.proto  HandlerMemory.rs  mod.rs
bdd/: README.md  bdd.sh  build_tools.sh  package-lock.json
bdd/spec/: 001_event_lnn_spec.sh  001_event_spec.sh  001_event_spec_lnn.sh  002_printing.sh  002_printing_lnn_spec.sh  (+47 more)
benches/: bench.ln  fill.rs  map.rs
compiler/: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  LICENSE  README.md  browser.js  cypress.config.ts  cypress.json  hashmap.ln  out.amm  out.js  package.json  temp.aga  temp.amm  temp.js  temp.ln  temp.lnn  temp.txt  temp2.aga  temp2.amm  temp2.ln  test.html  tsconfig.json
example_24_0_3/: Cargo.toml
example_24_0_5/: Cargo.toml
example_24_0_5/src/: lib.rs
example_25_0_0/: Cargo.toml
example_25_0_2/: Cargo.toml
example_25_0_2/src/: lib.rs
example_26_0_0/: Cargo.toml
example_26_0_1/: Cargo.toml
example_dfellis_trunk/: Cargo.toml
js-runtime/: LICENSE  README.md  index.js  package.json
rfcs/: 000 - RFC Template.md  001 - Meta RFC.md  002 - Operator Cleanup RFC.md  003 - FFI Support RFC.md  003 - Matrices, Vectors, Stats, and Trig RFC.md  004 - Automatic Argument Interfaces RFC.md  004 - Runtime Error Elimination RFC.md  004 - Sequential Algorithms RFC.md  005 - Matrices Revisited RFC.md  006 - Automatic Argument Interfaces RFC.md  007 - Sequential Algorithms RFC.md  008 - Safe Global Data Storage RFC.md  009 - Tree RFC.md  010 - Tree Revisited RFC.md  011 - Function Type RFC.md  012 - Either, Option, and Result Destructuring.md  013 - Datastore Revisited RFC.md  014 - Rework IO Parallelization.md  015 - Reworked Compiler Front End.md  015 - TCP RFC.md  016 - Reworked Compiler Front End.md  017 - Cluster Data Storage RFC.md  018 - Control Port Extensions RFC.md  019 - Datastore Compute RFC.md  020 - Dependencies permissions RFC.md  021 - Datastore Restructuring RFC.md  022 - Alan v0.2.md  023 - Evolving the Syntax.md  README.md  rfc017.dot
runtime/: Cargo.toml  README.md  benchmark.js
runtime/.github/workflows/: tests.yml
runtime/examples/agc/: example.agc  example.amm  example.ln  example.md
runtime/src/: main.rs
runtime/src/benchmark/: benchmark.js  benchmark.py  run.rs
runtime/src/compile/: .compile.rs.swp  compile.rs  mod.rs  windows.rs
runtime/src/vm/: event.rs  instruction.rs  memory.rs  opcode.rs  program.rs  run.rs
scripts/: check_rust_version.bat  check_rust_version.ps1  check_rust_version.sh  update_branch_urls.sh
src/: compile.rs  lib.rs  lntors.rs  main.rs  parse.rs  program.rs
std/: README.md  app.ln  app.lnn  avmdaemon.ln  cmd.ln  datastore.ln  deps.ln  http.ln  httpcommon.ln  httpserver.ln  json.ln  root.ln  root.lnn  seq.ln  tcp.ln  tcpserver.ln  trig.ln
web_compiler/: Cargo.toml
web_compiler/src/: lib.rs
(+235 files in other folders)
