[workspace]
members = [ "alan", "alan_compiler", "alan_std", "web_compiler", "example_24_0_3", "example_24_0_5", "example_25_0_0", "example_25_0_2", "example_26_0_0", "example_26_0_1" ]
resolver = "2"

[workspace.package]
license = "MIT"
homepage = "https://alan-lang.org"
documentation = "https://docs.alan-lang.org"
repository = "https://github.com/alantech/alan"
version = "0.2.0"
rust-version = "1.88.0"
authors = ["David Ellis <isv.damocles@gmail.com>"]
edition = "2021"