[package]
name = "alan"
description = "The Alan Compiler"
license = "MIT"
homepage = "https://alan-lang.org"
documentation = "https://docs.alan-lang.org"
repository = "https://github.com/alantech/alan"
version = "0.2.0"
authors = ["David Ellis <isv.damocles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
fs2 = "0.4.3"
nom = "7.1.3"
ordered_hash_map = "0.4.0"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "fill"
harness = false

[[bin]]
name = "alan"
test = false
