[package]
name = "alan"
description = "The Alan Compiler"
license = "MIT"
homepage = "https://alan-lang.org"
documentation = "https://docs.alan-lang.org"
repository = "https://github.com/alantech/alan"
version = "0.2.0"
authors = ["David Ellis <isv.damocles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alan_compiler = { path = "../alan_compiler" }
clap = { version = "4.5.26", features = ["derive"] }
dirs = "5.0.1"
fs2 = "0.4.3"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "fill"
harness = false

[[bin]]
name = "alan"
test = false
