[package]
name = "alan"
description = "The Alan Compiler"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alan_compiler = { path = "../alan_compiler" }
clap = { version = "4.5.26", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "fill"
harness = false

[[bin]]
name = "alan"
test = false
