[package]
name = "alan_compiler"
description = "The Alan Compiler"
license = "MIT"
homepage = "https://alan-lang.org"
documentation = "https://docs.alan-lang.org"
repository = "https://github.com/alantech/alan"
version = "0.2.0"
authors = ["David Ellis <isv.damocles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
ordered_hash_map = "0.4.0"
weak-table = "0.3.2"
