[package]
name = "alan_compiler"
description = "The Alan Compiler"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
ordered_hash_map = "0.4.0"
weak-table = "0.3.2"
