[package]
name = "alan_std"
description = "The Alan Standard Library Rust Implementation"
license = "MIT"
homepage = "https://alan-lang.org"
documentation = "https://docs.alan-lang.org"
repository = "https://github.com/alantech/alan"
version = "0.2.0"
authors = ["David Ellis <isv.damocles@gmail.com>"]
edition = "2021"

[dependencies]
flume = "0.11.1"
futures = "0.3.31"
ordered_hash_map = "0.4.0"
pollster = "0.4.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
wgpu = "23.0.1"
winit = "0.30.5"
