[package]
name = "alan_std"
description = "The Alan Standard Library Rust Implementation"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
flume = "0.11.1"
futures = "0.3.31"
ordered_hash_map = "0.4.0"
pollster = "0.4.0"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
wgpu = "25.0.2"
winit = "0.30.9"
