[package]
name = "alan_std"
description = "The Alan Standard Library Rust Implementation"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.32"
ordered_hash_map = "0.5.0"
pollster = "0.4.0"
uuid = { version = "1.23.1", features = ["v4", "fast-rng"] }
wgpu = "28.0.0"
winit = "0.30.13"
