[package]
name = "alan"
description = "The Alan Compiler and VM"
license = "MIT"
homepage = "https://alan-lang.org"
documentation = "https://docs.alan-lang.org"
repository = "https://github.com/alantech/alan"
version = "0.1.45-beta3"
authors = ["Luis de Pombo <luis@alantechnologies.com>", "David Ellis <david@alantechnologies.com>", "Alejandro Guillen <alejandro@alantechnologies.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_table = "3.0"
async-stream = "0.3.0"
base64 = "0.13"
byteorder = "1.3.4"
clap = "2.33.3"
dashmap = "3.11.10"
dialoguer = "0.8.0"
flate2 = "1.0"
futures = "0.3.8"
futures-util = "0.3.13"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime", "server"] }
hyper-openssl = "0.9.2"
hyper-rustls = "0.22.1" # needed for HTTPS w/ hyper
indicatif = "0.15.0"
lazy_static = "1.4.0"
num_cpus = "1.0"
once_cell = "1.5.2"
openssl = "0.10.59"
protobuf = "2.23.0"
rand = "0.8.3"
regex = "1"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_ini = { version = "0.2" }
serde_json = { version = "1.0" }
sysinfo = "0.29.10"
tempdir = "0.3"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }
tokio-rustls = "0.22.0"
trust-dns-resolver = { version = "0.20.0", features = ["dns-over-rustls"] }
twox-hash = "1.5.0"
webbrowser = "0.8.3"

[build-dependencies]
protoc-bin-vendored = "2.23.0"
protoc-rust = "2.23.0"
