[package]
name = "example_26_0_1"
description = "Example Test App using wgpu 26.0.1"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.31"
wgpu = "26.0.1"
