[package]
name = "alan-runtime"
version = "0.1.0"
authors = ["Luis de Pombo <lfdepombo@gmail.com>", "David Ellis <isv.damocles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
clap = "2.33.0"
futures = "0.3.5"
num_cpus = "1.0"
once_cell = "1.3.1"
rayon = "1.3"
tokio = { version = "0.2", features = ["rt-core", "macros", "sync", "time"] }