[package]
name = "web_compiler"
description = "A limited version of the Alan Compiler to run inside of the browser"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
alan_compiler = { path = "../alan_compiler" }
wasm-bindgen = "0.2.100"
