[package]
name = "anycloud"
description = "Elastically scale webservers in any cloud provider"
license = "Apache-2.0"
homepage = "https://github.com/alantech/anycloud"
documentation = "https://alantech.gitbook.io/anycloud"
repository = "https://github.com/alantech/anycloud"
version = "0.1.37-beta3"
authors = ["Luis de Pombo <luis@alantechnologies.com>", "David Ellis <david@alantechnologies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_table = "3.0"
base64 = "0.13"
clap = "2.33.1"
dialoguer = "0.8.0"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime", "server"] }
hyper-tls = "0.5" # needed for HTTPS w/ hyper
indicatif = "0.15.0"
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_ini = { version = "0.2" }
serde_json = { version = "1.0" }
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "time"] }
webbrowser = "0.5.5"
